# tensorflow

./: CMakeLists.txt
cmake/: TensorflowShared.cmake  build_tensorflow.sh  tensorflow.pc.cmake.in
